--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     <title>
         React-app
     </title>
-    <link rel="icon" type="image/png" href="https://hackmd.io/favicon.png">
+    <link rel="icon" type="image/png" href="https://assets4.domestika.org/job-covers/000/042/274/42274-original.png?1470139235">
     <link rel="apple-touch-icon" href="https://hackmd.io/apple-touch-icon.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
